--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3971,6 +3971,10 @@ input:focus, input:focus-visible {
     background-color: var(--base-two-600) !important;
 }
 
+.group:hover .group-hover-bg-primary-400 {
+    background-color: var(--primary-400) !important;
+}
+
 .group:hover .group-hover-bg-neutral-200 {
     background-color: #F5F9FC1A !important;
 }
@@ -6782,8 +6786,8 @@ input:focus, input:focus-visible {
 }
 
 .py-120 {
-    padding-block-start: 60px;
-    padding-block-end: 60px;
+    padding-block-start: 120px;
+    padding-block-end: 120px;
 }
 
 @media (min-width: 576px) {
@@ -9061,13 +9065,45 @@ input:focus, input:focus-visible {
   height: 100%;
   top: 3px;
   left: 3px;
-  background-color: #347dff; /* Shadow color */
+  background-color: hsl(224.9, 84%, 53.5%); /* Shadow color */
   border-radius: 0.5rem;
   z-index: -1;
   transition: 0.3s ease;
 }
 
 .btn-link:hover::before {
+  top: -3px;
+  left: -3px;
+}
+
+.btn-link-pre {
+  position: relative;
+  display: inline-block;
+  padding: 15px 30px;
+  font-size: 16px;
+  font-weight: 500;
+  color: white;  
+  background-color: hsl(224.9, 84%, 53.5%); /* Shadow color */
+  border-radius: 0.5rem;
+  text-decoration: none;
+  transition: 0.3s;
+  z-index: 1;
+}
+
+.btn-link-pre::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 3px;
+  left: 3px;  
+  background-color: #104042; /* Blue button color */
+  border-radius: 0.5rem;
+  z-index: -1;
+  transition: 0.3s ease;
+}
+
+.btn-link-pre:hover::before {
   top: -3px;
   left: -3px;
 }
@@ -11500,5 +11536,79 @@ button.show {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.error-text{
+    color:red;
+}
+
+
+/* Help  */
+.help-for-faq{
+    display: flex;
+    gap: 3;
+}
+
+
+/* Add this in your main CSS file */
+.wrapper-cookie {
+  position: fixed !important;
+  bottom: 30px;
+  left: 50px;
+  max-width: 365px;
+  background: var(--primary-color); /* Fallback color if --primary-color isn't defined */
+  padding: 25px 25px 30px 25px;
+  border-radius: 15px;
+  box-shadow: 1px 7px 14px -5px rgba(0, 0, 0, 0.15);
+  z-index: 9999 !important;
+}
+
+.wrapper-cookie a{
+color:#e3e3e3
+}
+
+.wrapper-cookie.hide {
+    opacity: 0 !important;
+    display: none !important;
+    pointer-events: none;
+    transform: scale(0.8);
+    transition: all 0.3s ease;
+}
+
+.wrapper-cookie img {
+    max-width: 32px;
+}
+
+@media only screen and (max-width: 767px) {
+    .wrapper-cookie {
+        position: fixed !important;
+        bottom: 30px;
+        left: 5px !important;
+    }
+}
+
+.cta-btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+@media only screen and (max-width: 767px) {
+    .cta-btn {
+        display: block;
+        justify-content: space-between;
+        align-items: baseline;
+    }
+
+    .cta-btn .download-btn {
+        margin-top: 15px;
+    }
+}
+
+.ul2, .ul3 {
+  line-height: 30px;
+  margin-left: 15px;
+  color: var(--dark-700);
+  font-weight: 400 !important;
 }
 
