--- a/src/css/steps.css
+++ b/src/css/steps.css
@@ -332,7 +332,7 @@
         }
 
         .nav-pills.style1 .nav-item .nav-link {
-            color: #fff;
+            color: #121212;
             background-color: #c8c8c8;
             font-weight: 500;
             font-size: 13px;
@@ -352,7 +352,7 @@
             color: #fff;
         }
             .nav-pills.style1 .nav-item .nav-link h6 {
-                color: #fff;
+                color: #121212;
             }
 
 .nav-tabs.style1 {
